04-eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka
  namespace: pedinephro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka
        image: azizos07/eureka:latest
        ports:
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: pedinephro
spec:
  selector:
    app: eureka
  ports:
  - port: 8761
    targetPort: 8761
