07-user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: pedinephro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: azizos07/user-service:latest

        ports:
        - containerPort: 8081

        # ✅ STARTUP PROBE (wait for app boot)
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          failureThreshold: 30
          periodSeconds: 5

        # ✅ READINESS PROBE (ready to receive traffic)
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 10

        # ✅ LIVENESS PROBE (is app alive)
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 40
          periodSeconds: 15
          failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: pedinephro
spec:
  selector:
    app: user-service
  ports:
  - port: 8081
    targetPort: 8081
