08-medical-records.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medical-records
  namespace: pedinephro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: medical-records
  template:
    metadata:
      labels:
        app: medical-records
    spec:
      containers:
      - name: medical-records
        image: azizos07/medical-records:latest
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: medical-records
  namespace: pedinephro
spec:
  selector:
    app: medical-records
  ports:
  - port: 8082
    targetPort: 8082
