09-transplant-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transplant-service
  namespace: pedinephro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transplant-service
  template:
    metadata:
      labels:
        app: transplant-service
    spec:
      containers:
      - name: transplant-service
        image: azizos07/transplant-service:latest
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: transplant-service
  namespace: pedinephro
spec:
  selector:
    app: transplant-service
  ports:
  - port: 8083
    targetPort: 8083
