10-vital-signs-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vital-signs-service
  namespace: pedinephro
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vital-signs-service
  template:
    metadata:
      labels:
        app: vital-signs-service
    spec:
      containers:
      - name: vital-signs-service
        image: azizos07/vital-signs-service:latest
        ports:
        - containerPort: 8084
        startupProbe:
          tcpSocket:
            port: 8084
          failureThreshold: 60
          periodSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 8084
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8084
          initialDelaySeconds: 90
          periodSeconds: 15
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: vital-signs-service
  namespace: pedinephro
spec:
  selector:
    app: vital-signs-service
  ports:
  - port: 8084
    targetPort: 8084
