hospitalisation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospitalisation
  namespace: pedinephro

spec:
  replicas: 1

  selector:
    matchLabels:
      app: hospitalisation

  template:
    metadata:
      labels:
        app: hospitalisation

    spec:
      containers:
        - name: hospitalisation
          image: alaadid/hospitalisation:9

          ports:
            - containerPort: 8089
---
apiVersion: v1
kind: Service

metadata:
  name: hospitalisation
  namespace: pedinephro

spec:
  selector:
    app: hospitalisation

  ports:
    - port: 8089
      targetPort: 8089
